--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -557,6 +557,20 @@ nav {
 }
 
 
+/* Custom Scrollbar Override */
+
+.chat:hover .mCS-minimal.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
+  background-color: #fff !important; background-color: rgba(255,255,255,0.1) !important;
+  filter: "alpha(opacity=10)" !important; -ms-filter: "alpha(opacity=10)" !important; 
+}
+
+.chat:hover .mCS-minimal.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar,
+.chat:hover .mCS-minimal.mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar{
+  background-color: #fff !important; background-color: rgba(255,255,255,0.2) !important;
+  filter: "alpha(opacity=20)" !important; -ms-filter: "alpha(opacity=20)" !important; 
+}
+
+
 /********************************************/
 /* Room Styling                             */
 /********************************************/
